--- a/contactme.html
+++ b/contactme.html
@@ -15,3 +15,15 @@ title: "Contact me"
   </fieldset>
   <input type="submit" value="Submit">
 </form>
+
+<div id="contact">
+        <h2>Get in Touch</h2>
+        <div id="contact-form">
+                <form action="https://formspree.io/f/mpzbedzn" method="POST">
+                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="email" name="_replyto" placeholder="Your email" required>
+                <textarea name="message" placeholder="Type your message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
