--- a/contactme.html
+++ b/contactme.html
@@ -22,3 +22,8 @@
             </form>
         </div>
     </div>
+<form action="http://formspree.io/oakati.github.io@gmail.com" method="post">
+  <input type="email" name="_replyto">
+  <textarea name="body"></textarea>
+  <input type="submit" value="Send">
+</form>
