--- a/contactme.html
+++ b/contactme.html
@@ -1,4 +1,4 @@
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mpzbedzn" method="post">
+<!-- <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mpzbedzn" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">Full Name</label>
     <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
@@ -21,7 +21,7 @@
                 <button type="submit">Send</button>
             </form>
         </div>
-    </div>
+    </div> -->
 <form action="http://formspree.io/oakati.github.io@gmail.com" method="post">
   <input type="email" name="_replyto">
   <textarea name="body"></textarea>
