--- a/contactme.html
+++ b/contactme.html
@@ -22,8 +22,20 @@
             </form>
         </div>
     </div> -->
-<form action="http://formspree.io/oakati.github.io@gmail.com" method="post">
+<!-- <form action="http://formspree.io/oakati.github.io@gmail.com" method="post">
   <input type="email" name="_replyto">
   <textarea name="body"></textarea>
   <input type="submit" value="Send">
+</form> -->
+
+<html>
+  <body>
+  <form action="//formspree.io/oakati.github.io@gmail.com" method="POST">
+  <input type="text" name="name">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
 </form>
+  </body>
+  </html>
+
+
