--- a/contactme.html
+++ b/contactme.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "Contact me"
+---
+
 <html>
   <body>
     <form action="//formspree.io/oakati.github.io@gmail.com" method="POST">
