--- a/contactme.html
+++ b/contactme.html
@@ -1,14 +1,31 @@
 ---
-layout: default
-title: "Contact me"
+layout: page
+title: Contact
+permalink: /contact/
 ---
 
-<html>
-  <body>
-    <form action="//formspree.io/oakati.github.io@gmail.com" method="POST">
-      <input type="text" name="name">
-      <input type="email" name="_replyto">
-      <input type="submit" value="Send">
-    </form>
-  </body>
-</html>
+<form accept-charset="UTF-8" action="https://getform.io/f/6306f063-5eba-4c08-b8f7-9f2001abdc51" method="POST" enctype="multipart/form-data" target="_blank">
+          <div class="form-group">
+            <label for="exampleInputEmail1" required="required">Email address</label>
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName">Name</label>
+            <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Enter your name" required="required">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Favourite Platform</label>
+            <select class="form-control" id="exampleFormControlSelect1" name="platform" required="required">
+              <option>Github</option>
+              <option>Gitlab</option>
+              <option>Bitbucket</option>
+            </select>
+          </div>
+          <hr>
+          <div class="form-group mt-3">
+            <label class="mr-2">Upload your CV:</label>
+            <input type="file" name="file">
+          </div>
+          <hr>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
