--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <link rel="stylesheet" href="/assets/css/classes.css">
 <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="Ömer Alperen Katı">
-
+<link rel="shortcut icon" type="image/png" href="8-4cPyyBfg6vV7J7B.png">
+  
 <header>
   <a href="/" class="title">Ömer Alperen Katı</a>
   <nav><a aria-label="About Me" href="/" class="selected"><span aria-hidden="true">About Me</span></a><a aria-label="Portfolio" href="/portfolio/" ><span aria-hidden="true">Portfolio</span></a><a aria-label="Publications" href="/publications/" ><span aria-hidden="true">Publications</span></a><a aria-label="Posts" href="/posts/" ><span aria-hidden="true">Posts</span></a><a aria-label="Links" href="/links/" ><span aria-hidden="true">Links</span></a><a aria-label="Contact" href="/contact/" ><span aria-hidden="true">Contact</span></a></nav>
