--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="/assets/css/classes.css">
 <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="Ömer Alperen Katı">
-<link rel="shortcut icon" type="image/png" href="8-4cPyyBfg6vV7J7B.png">
+<link rel="shortcut icon" type="image/png" href="favico.png">
   
 <header>
   <a href="/" class="title">Ömer Alperen Katı</a>
