--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 <p>I am a senior undergraduate student in the <a href="https://ee.boun.edu.tr/">Electrical and Electronics Engineering Department</a> at <a href="http://www.boun.edu.tr/en-US/Index">Boğaziçi Üniversitesi</a>, İstanbul, Türkiye. My expected graduation date is January 2023. I was an Erasmus student at <a href="https://www.put.poznan.pl/en">Politechnika Poznańska (PUT)</a>, Poznań, Poland, in Spring 2021.</p>
 
-<p>I was with <a href="https://bountenna.boun.edu.tr/">Antennas and Propagation Research Laboratory (BOUNtenna)</a>, İstanbul, Türkiye, as an Undergraduate Research Assistant from July 2019 to March 2022. Also, I did two internships at <a href="https://www.turkcell.com.tr/english-support">Turkcell</a> and <a href="https://aselsan.com.tr/en">ASELSAN</a> during the summers of 2020 and 2021, respectively. I am currently with <a href="https://www.poilabs.com/en/home/">Poilabs</a>, as an embedded software developer intern. My current research interests include communication systems and embedded software development.</p>
+<p>I was with <a href="https://bountenna.boun.edu.tr/">Antennas and Propagation Research Laboratory (BOUNtenna)</a>, İstanbul, Türkiye, as an Undergraduate Research Assistant from July 2019 to March 2022. Also, I did two internships at <a href="https://www.turkcell.com.tr/english-support">Turkcell</a> and <a href="https://aselsan.com.tr/en">ASELSAN</a> during the summers of 2020 and 2021, respectively.</p>
+
+<p>I am currently with <a href="https://www.poilabs.com/en/home/">Poilabs</a>, as an embedded software developer intern. My current research interests include communication systems and embedded software development.</p>
 
 </article>
 
