--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Ömer Alperen Katı</title>
+<title>The official website of Ömer Alperen Katı</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Senior electrical and electronics engineering student specialized in telecommunications at Boğaziçi Üniversitesi, İstanbul, Türkiye.">
