Update birthday details for person and message

--- a/bday.html
+++ b/bday.html
@@ -684,9 +684,9 @@
         let currentLang = 'tr';
         let currentTheme = 'winter';
         // Hardcoded Bilgiler
-        let personName = 'Baba'; 
-        let birthYear = 1968; 
-        let customMessage = 'Mutlu yıllar, sevgili babam! İyi ki doğdun!'; 
+        let personName = 'Babato'; 
+        let birthYear = 1999; 
+        let customMessage = 'Mutlu yıllar, sevgili babato! İyi ki doğdun!'; 
         let allCandlesOut = false;
         
         let audioContext, analyser, microphone, dataArray;
