--- a/bday.html
+++ b/bday.html
@@ -684,9 +684,9 @@
         let currentLang = 'tr';
         let currentTheme = 'winter';
         // Hardcoded Bilgiler
-        let personName = 'Burakgreen';
+        let personName = 'Paşam';
         let birthYear = 1999; 
-        let customMessage = 'Mutlu yıllar, sevgili Burakgreen! İyi ki doğdun!'; 
+        let customMessage = 'Mutlu yıllar, sevgili Paşam! İyi ki doğdun!'; 
         let allCandlesOut = false;
         
         let audioContext, analyser, microphone, dataArray;
